# hologram-technologies.github.io

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .jupyterlite.doit.db  AGENTS.md  CHANGELOG.md  COMMITFIX  CONSTITUTION.md  MIGRATION.md  README.md  download.html  feed.xml  holo-coi-sw.js  index.html  manifesto.html
.githooks/: pre-push
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  pages.yml  security.yml
docs/: 404.html  download.html  index.html  manifesto.html  sitemap-0.xml  sitemap-index.xml
docs/_astro/: Search.astro_astro_type_script_index_0_lang.CDLBVbb4.js  common.CVE-_FuJ.css  ui-core.FS5-vlQY.js
docs/pagefind/: pagefind-entry.json  pagefind.en_3a8eeeb23c.pf_meta  pagefind.en_f77ef11434.pf_meta
docs/quickstart/: index.html
system/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  codemeta.json  holo-lifecycle-strand.jsonl  llms.txt  package-lock.json  package.json
system/.cargo/: config.toml
system/conformance/: README.md
system/crates/arm64-repro/: Cargo.toml  diff-trace.py  gen-baseline.sh  run-node-wasi.mjs  run-wasm.sh
system/crates/arm64-repro/src/: main.rs
system/crates/holospaces-web/cc6-fixture/: Cargo.toml
system/crates/holospaces-web/cc6-fixture/src/: lib.rs
system/crates/holospaces-web/x86-core/: Cargo.toml
system/crates/holospaces-web/x86-core/src/: lib.rs
system/docs/: holo-explorer-p0.md  holo-explorer.md  holo-files-parity.md  holo-forge-authz-spec.md  holo-forge-unified-cutover.md  holo-voice-realtime-exploration.md  hologram-type1-hypervisor.md  kappa-open-mobile-reflection.md  kappa-open-reflection.md  kappa-open-share-frame-reflection.md  mobile-everywhere-reflection.md  q-shipscomputer-mobile.md
system/holospaces/: README.md
system/os/: agent-registry-witness.mjs  agent-router-witness.mjs  agent-surfaces-witness.mjs  chat-carriage-witness.mjs  entry-routing-witness.mjs  holo-derive-portal-witness.mjs  holo-fhs-sw.js  holo-kappa-axis-lint.mjs  holo-q-app-kappa-witness.mjs  holo-q-open-witness.mjs  holo-runtime-manage-witness.mjs  holo-runtimes-shell-witness.mjs  holospace-tab-boot-witness.mjs  index.html  index.jsonld  learn-scheduler-witness.mjs  profile-proof-witness.mjs  profile-witness.mjs  proof-share-witness.mjs  range-proof-witness.mjs  reply-capture-witness.mjs  talk-to-q.html  user-adapter-witness.mjs
system/scripts/: build-repo-graph.mjs  coi_site.py  holo-relay.mjs  holo-relay.test.mjs  new-spec.mjs  serve-ka.mjs
system/tools/: .holo-live-broadcast.seed  _book-join.mjs  _cdp.mjs  _probe-gpu-physics.mjs  _probe-login-sdk.mjs  _probe-webgpu.mjs  _term.mjs  apply-gateway-marks.mjs  atlas96-forge.result.json  atlas96-resonator-gen.result.json  atlas96-resonator-witness.mjs  atlas96-resonator-witness.result.json  audit-apps.mjs  audit-apps.result.json  boot-budget-ci.mjs  boot-budget.json  boot-constitution-witness.mjs  boot-constitution-witness.result.json  boot-os2-witness.mjs  boot-os2-witness.result.json  build-skins-platform.mjs  build-skins.mjs  build-ui-library.mjs  bundle-sdk-shell.mjs  burndown-app-fontmin.mjs  burndown-app-radius.mjs  canonical-link.mjs  changelog-feed.mjs  compute-manifest.mjs  constitution-enforce-witness.mjs  constitution-enforce-witness.result.json  constitution.kappa.block  copy-content.mjs  csp-hashes.mjs  (+895 more)
(+1177 files in other folders)
